--- a/PatikaDev/src/main/java/com/patikaDev/View/StudentGUI.form
+++ b/PatikaDev/src/main/java/com/patikaDev/View/StudentGUI.form
@@ -41,7 +41,7 @@
                     </constraints>
                     <properties/>
                   </component>
-                  <grid id="1886f" layout-manager="GridLayoutManager" row-count="3" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+                  <grid id="1886f" layout-manager="GridLayoutManager" row-count="4" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
                     <margin top="0" left="0" bottom="0" right="0"/>
                     <constraints>
                       <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
@@ -59,11 +59,6 @@
                           <editable value="false"/>
                         </properties>
                       </component>
-                      <vspacer id="c18da">
-                        <constraints>
-                          <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false"/>
-                        </constraints>
-                      </vspacer>
                       <component id="14df0" class="javax.swing.JButton" binding="btn_patika_katil">
                         <constraints>
                           <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
@@ -72,6 +67,21 @@
                           <text value="Patikaya Katıl"/>
                         </properties>
                       </component>
+                      <component id="e2581" class="javax.swing.JTextArea" binding="txtarea_katildiginiz_patikalar">
+                        <constraints>
+                          <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="6" hsize-policy="6" anchor="0" fill="3" indent="0" use-parent-layout="false">
+                            <preferred-size width="150" height="100"/>
+                          </grid>
+                        </constraints>
+                        <properties>
+                          <editable value="false"/>
+                        </properties>
+                      </component>
+                      <vspacer id="c18da">
+                        <constraints>
+                          <grid row="3" column="0" row-span="1" col-span="1" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false"/>
+                        </constraints>
+                      </vspacer>
                     </children>
                   </grid>
                 </children>
@@ -84,19 +94,13 @@
                 <properties/>
                 <border type="none"/>
                 <children>
-                  <component id="536f7" class="javax.swing.JComboBox" binding="comboBox1" default-binding="true">
+                  <component id="536f7" class="javax.swing.JComboBox" binding="cmb_patikalarim">
                     <constraints>
                       <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="2" anchor="8" fill="1" indent="0" use-parent-layout="false"/>
                     </constraints>
-                    <properties/>
-                  </component>
-                  <component id="1ea3f" class="javax.swing.JTable" binding="table1" default-binding="true">
-                    <constraints>
-                      <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="6" hsize-policy="6" anchor="0" fill="3" indent="0" use-parent-layout="false">
-                        <preferred-size width="150" height="50"/>
-                      </grid>
-                    </constraints>
-                    <properties/>
+                    <properties>
+                      <model/>
+                    </properties>
                   </component>
                   <grid id="921d3" layout-manager="GridLayoutManager" row-count="2" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
                     <margin top="0" left="0" bottom="0" right="0"/>
@@ -106,7 +110,7 @@
                     <properties/>
                     <border type="none"/>
                     <children>
-                      <component id="788fc" class="javax.swing.JButton" binding="içerikleriGösterButton" default-binding="true">
+                      <component id="788fc" class="javax.swing.JButton" binding="btn_contents">
                         <constraints>
                           <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
                         </constraints>
@@ -121,6 +125,19 @@
                       </vspacer>
                     </children>
                   </grid>
+                  <scrollpane id="ca63a">
+                    <constraints>
+                      <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="7" hsize-policy="7" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+                    </constraints>
+                    <properties/>
+                    <border type="none"/>
+                    <children>
+                      <component id="5f35" class="javax.swing.JTable" binding="tbl_contents">
+                        <constraints/>
+                        <properties/>
+                      </component>
+                    </children>
+                  </scrollpane>
                 </children>
               </grid>
               <grid id="d9415" binding="pnl_testler" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
