--- a/PatikaDev/src/main/java/com/patikaDev/View/EducatorGUI.form
+++ b/PatikaDev/src/main/java/com/patikaDev/View/EducatorGUI.form
@@ -256,7 +256,7 @@
                               <text value=""/>
                             </properties>
                           </component>
-                          <component id="63058" class="javax.swing.JButton" binding="içerikSilButton" default-binding="true">
+                          <component id="63058" class="javax.swing.JButton" binding="btn_content_delete">
                             <constraints>
                               <grid row="10" column="0" row-span="1" col-span="2" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
                             </constraints>
