--- a/PatikaDev/src/main/java/com/patikaDev/View/StudentGUI.form
+++ b/PatikaDev/src/main/java/com/patikaDev/View/StudentGUI.form
@@ -183,7 +183,11 @@
                         <constraints>
                           <grid row="2" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="2" anchor="8" fill="1" indent="0" use-parent-layout="false"/>
                         </constraints>
-                        <properties/>
+                        <properties>
+                          <model>
+                            <item value="Patika"/>
+                          </model>
+                        </properties>
                       </component>
                       <hspacer id="6b77a">
                         <constraints>
